--- a/stylance.css
+++ b/stylance.css
@@ -40,6 +40,87 @@
     height: 35px;
 }
 
+.program-dde4a68 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 1em;
+  margin: 1em;
+  border-radius: 10px;
+}
+
+.program_info-dde4a68 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.switch-dde4a68 {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch-dde4a68 input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider-dde4a68 {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider-dde4a68:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider-dde4a68 {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider-dde4a68 {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider-dde4a68:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider-dde4a68.round-dde4a68 {
+    border-radius: 34px;
+  }
+  
+  .slider-dde4a68.round-dde4a68:before {
+    border-radius: 50%;
+  }
+  
+
 
 .week-767755e {
     display: flex;
@@ -73,4 +154,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.action_box-6386bea {
+    float: left;
+    background-color: aliceblue;
+    width: 70vw;
+    height: 30vh;
+    position: fixed;
+    top: 35%;
+    left: 15%;
+    z-index: 1000;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.action_buttons-6386bea {
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
+
 }
