--- a/src/create_program/create_workout/card.css
+++ b/src/create_program/create_workout/card.css
@@ -4,13 +4,32 @@
     aspect-ratio: 16/9;
     border-radius: 5px;
 }
-.card-body {
-    margin: 5px;
+.card_title_form {
+    flex: 1;
+}
+.card-title {
+    /* height: 3rem;
+    width: 100%;
+    background-color: transparent;
+    box-shadow: none;
+    field-sizing: fixed;
+    overflow-wrap: break-word;
+    overflow-y: auto; */
+}
+
+.card {
+    background-color: color-mix(in hsl, var(--quinary-color) 30%, transparent 70%);
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color:rgb(255, 255, 255);
+    margin: 5px;
     border-radius: 10px;
+}
+.card-body {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    flex-direction: row;
 }
 .card-thumbnail {
     margin: 9px;
