--- a/src/workout_list/workout_list.css
+++ b/src/workout_list/workout_list.css
@@ -1,3 +1,8 @@
+.program_list {
+    margin-bottom: 20dvh;
+    width: 95vw;
+}
+
 .action_box {
     float: left;
     background-color: aliceblue;
@@ -18,5 +23,59 @@
     display: flex;
     justify-content: space-around;
     margin: 10px;
+}
 
+.add_program_form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    position: fixed;
+    bottom: 10dvh;
+    width: calc(95vw - 1.5rem);
+    height: 8dvh;
+    background-color: var(--primary-color);
+    padding: 0.5rem;
+}
+
+.add_program_button {
+    margin: 0 1rem;
+    background-color: color-mix(in hsl, var(--quinary-color) 30%, transparent 70%);
+    box-shadow: none;
+    border: none;
+    border-radius: 0.5rem;
+    border-radius: 1rem;
+}
+
+.add_program_button:active {
+    background-color: color-mix(in hsl, var(--quinary-color) 70%, transparent 30%);
+}
+
+.add_program_textbox {
+    flex-grow: 5;
+    margin: 0 1rem;
+    background-color: color-mix(in hsl, var(--quinary-color) 30%, transparent 70%);
+    box-shadow: none;
+    text-align: center;
+    font-size: large;
+    border-radius: 2rem;
+}
+
+.add_program_textbox:focus {
+    box-shadow: 0 0 0.2rem var(--tertiary-color);
+}
+
+.add_program_restore_button {
+    margin: 0 1rem;
+    background-color: color-mix(in hsl, var(--quinary-color) 30%, transparent 70%);
+    box-shadow: none;
+    border: none;
+    border-radius: 1rem;
+    height: 100%;
+    flex-grow: 1;
+    align-content: center;
+    cursor: pointer;
+}
+
+.add_program_restore_button:active {
+    background-color: color-mix(in hsl, var(--quinary-color) 70%, transparent 30%);
 }
