--- a/stylance.css
+++ b/stylance.css
@@ -283,6 +283,10 @@
     padding: 0.5rem;
 }
 
+.current-workout-container-68b040d {
+    margin-bottom: 10dvh;
+}
+
 .program-dde4a68 {
   display: flex;
   flex-direction: row;
