--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,21 @@
     /* --quinary-color: #FFC131; */
     /* --quinary-color: #222cb21a; */
     background-color: var(--primary-color);
+    color: black;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --primary-color: #222222;
+        --secondary-color: #D5A09D;
+        --tertiary-color: #B5B0B9;
+        --quaternary-color: #9D788B;
+        --quinary-color: #555555;
+        /* --quinary-color: #FFC131; */
+        /* --quinary-color: #222cb21a; */
+        background-color: var(--primary-color);
+        color: #CCCCCC;
+    }
 }
 
 .nav-bar {
@@ -26,11 +41,11 @@
     box-shadow: none;
     border: none;
     border-radius: 0.5rem;
-    color: black;
+    /* color: black; */
     font-size: 1.1rem;
-    padding: 0rem;
+    padding: 1rem;
     height: 3rem;
-    width: 9rem;
+    /* width: 12rem; */
 }
 
 .nav-button:hover {
@@ -39,7 +54,7 @@
 }
 
 .nav-button:active {
-    background-color: var(--tertiary-color);
+    background-color: color-mix(in hsl, var(--quinary-color) 30%, transparent 70%);
     box-shadow: none;
     color: white;
     cursor: pointer;
