--- a/src/create_program/calendar/calendar.css
+++ b/src/create_program/calendar/calendar.css
@@ -22,9 +22,15 @@
     align-items: center;
     background-color: var(--color-primary);
     box-shadow: none;
+    display: flex;
 }
 .active {
     background-color: rgba(0, 0, 0, 0.1);
+}
+@media (prefers-color-scheme: dark) {
+    .active {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 }
 .day {
     display: flex;
