--- a/src/workout_list/workout_list.css
+++ b/src/workout_list/workout_list.css
@@ -3,9 +3,21 @@
     width: 95vw;
 }
 
+.action_box_background {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+}
+
 .action_box {
     float: left;
-    background-color: aliceblue;
+    background-color: var(--primary-color);
     width: 70vw;
     height: 30vh;
     position: fixed;
@@ -20,6 +32,9 @@
 }
 
 .action_buttons {
+    background-color: color-mix(in hsl, var(--quinary-color) 30%, transparent 70%);
+}
+.action_buttons_container {
     display: flex;
     justify-content: space-around;
     margin: 10px;
