align duration in current workout to center

--- a/stylance.css
+++ b/stylance.css
@@ -208,6 +208,7 @@
     top: -50px;
     left: 90px;
     width: 50px;
+    text-align: center;
 }
 .done-50f23ff {
     background-color: RGBA(0, 255, 0, 0.15);
