--- a/src/current_workout/card/card.css
+++ b/src/current_workout/card/card.css
@@ -32,6 +32,7 @@
     top: -50px;
     left: 90px;
     width: 50px;
+    text-align: center;
 }
 .done {
     background-color: RGBA(0, 255, 0, 0.15);
