--- a/stylance.css
+++ b/stylance.css
@@ -467,32 +467,63 @@
 
 .program-dde4a68 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: color-mix(in hsl, var(--quinary-color) 30%, transparent 70%);
-  padding: 1em;
-  margin: 1em;
+  width: 100%;
   border-radius: 1.5rem;
   cursor: pointer;
   transition: all 3s ease-out;
 }
 
 .program_title_form-dde4a68 {
+  width: 100%;
+}
+
+.program_image-dde4a68 {
+  width: 100%;
+  aspect-ratio: 16/9;
+  border-radius: 1.5rem;
+}
+
+.program_image_container-dde4a68{
+  aspect-ratio: 16/9;
+  width: 95%;
+  border-radius: 1.5rem;
+  background-color: var(--quinary-color);
+  transition: all 0.3s ease-out;
+  filter: brightness(0.85);
+  overflow: hidden;
 }
 
 .program_title-dde4a68 {
   cursor: text;
-  width: fit-content;
   min-width: 1ch;
-  max-width: 100%;
+  width: 95%;
   font-size: 1.5rem;
   font-weight: bold;
   background-color: transparent;
   box-shadow: none;
   /* field-sizing: content; */
-  text-align: left;
+  text-align: center;
   padding: 0.5rem;
+}
+
+.program_description-dde4a68 {
+  cursor: text;
+  min-width: 1ch;
+  width: calc(95% - 2rem);
+  font-size: 1rem;
+  font-weight: normal;
+  background-color: transparent;
+  box-shadow: none;
+  /* field-sizing: content; */
+  overflow-wrap: break-word;
+  text-align: left;
+  white-space: pre-wrap;
+  padding: 0.5rem;
+  margin-left: 1rem;
 }
 
 
@@ -503,9 +534,53 @@
 
 .program_info-dde4a68 {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
+  flex-direction: row;  
   align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin-right: 0.5rem;
+  padding: 0.5rem;
+}
+
+.program_image_overlay-dde4a68 {
+  position: relative;
+  display: flex;
+  top: -4rem;
+  left: 0.5rem;
+  width: calc(100% - 2rem);
+  border-radius: 0.5rem;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.5rem;
+}
+
+.program_image_icon-dde4a68 {
+  background-color: color-mix(in hsl, var(--quinary-color) 70%, transparent 30%);
+  border-radius: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.program_image_icon-dde4a68:hover {
+  box-shadow: 0 0 0.2rem var(--tertiary-color);
+  filter: brightness(1.2); /* Increase brightness */
+  transform: scale(1.15); /* Slightly enlarge the icon */
+  transition: all 0.3s ease-out;
+}
+
+@media (prefers-color-scheme: dark) {
+  .program_image_icon-dde4a68 {
+    filter: brightness(1.5); /* Increase brightness */
+    transform: scale(1.1); /* Slightly enlarge the icon */
+  }
+}
+
+.program_image_overlay-dde4a68 > p {
+  background-color: color-mix(in hsl, var(--quinary-color) 70%, transparent 30%);
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border-radius: 0.5rem;
+  cursor: text;
 }
 
 .share_icon-dde4a68 {
@@ -513,8 +588,21 @@
   margin: 0 0.5rem;
 }
 
+
+.share_icon-dde4a68:hover {
+  filter: brightness(1.2); /* Increase brightness */
+  transform: scale(1.15); /* Slightly enlarge the icon */
+  transition: all 0.1s ease-out;
+}
+
 .delete_icon-dde4a68 {
   font-size: 1.7rem;
+}
+
+.delete_icon-dde4a68:hover {
+  filter: brightness(1.2); /* Increase brightness */
+  transform: scale(1.15); /* Slightly enlarge the icon */
+  transition: all 0.1s ease-out;
 }
 
 .switch-dde4a68 {
@@ -753,7 +841,23 @@
 .program_list-6386bea {
     margin-bottom: 20dvh;
     width: 95vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    --grid-gutter: 10px;
+    grid-gap: var(--grid-gutter);
+    --grid-row-height: 10px;
+    grid-auto-rows: var(--grid-row-height);
+    grid-auto-flow: row dense;
+    position: relative;
 }
+.is_being_measured-6386bea {
+    /* temporary styles for measuring grid items */
+    position: absolute;
+    width: 300px;
+    top: 0;
+    left: 0;
+  }
+  
 
 .action_box_background-6386bea {
     background-color: rgba(0, 0, 0, 0.4);
@@ -770,7 +874,7 @@
 .action_box-6386bea {
     float: left;
     background-color: var(--primary-color);
-    width: 70vw;
+    width: 80vw;
     height: 30vh;
     position: fixed;
     top: 35%;
@@ -798,7 +902,7 @@
     justify-content: space-around;
     position: fixed;
     bottom: 10dvh;
-    width: calc(95vw - 1.5rem);
+    width: calc(95vw);
     height: 8dvh;
     background-color: var(--primary-color);
     padding: 0.5rem;
